# VoiceAI-Rena

./: .env.example  .gitignore  LOGGING.md  Launch_VoiceAI.bat  Launch_VoiceAI_Public.bat  README.md  analyze_chunks.py  company_support_agent.py  production_ingestion_gpt.txt  project_documentation.md  pyproject(cuda128).toml.example  pyproject.toml  test_hinglish_tts.py
Project Docs/: Project_Documentation.docx
docs/: Nemo_setup.md  RAG_UPDATES_2025_12_15.md  RAG_UPDATES_2025_12_16.md  RAG_UPDATES_2025_12_29.md  RAG_UPDATES_2025_12_30.md  RAG_UPDATES_2026_03_20.md  RAG_UPDATES_2026_1_29.md
src/: CarbonCompliance_CleanedTranscript.txt  app.py  avaada_presentation.json  company_data.json  company_support_agent.py  company_support_agent2.py  custom_tts_rena.py  edge_tts.py  fastrtc_groq_voice_stream.py  main.py  main_sample.py  nemo_magpie_tts.py  process_groq_tts.py  renata_data.json  renata_data2.json  test_faster_whisper.py  test_native_fastrtc.py  test_veena.py  twilio_outbound.py
src/Audio_transcripts/: Carbon Compliance.txt  knowledge_base.txt  renata_audio.txt
src/Meeting-Notes-App/: meeting_auto_processor.py  meeting_notes_generator.py  meeting_recorder_gui.py  real_time_meeting_recorder.py  requirements.txt  setup_checker.py  web_interface.py
src/json/: Carbon_Compliance.json  avaada_presentation.json
src/rag_input_files/: company_support_agent.py  create_index.py  knowledge_base.txt  main.py  process_groq_tts.py
src/rag_integration/: company_corpus_chunks.npy  company_corpus_chunks_2.npy  company_corpus_chunks_2_1.npy  company_corpus_metadata_2.npy  company_corpus_metadata_3.npy  create_index.py  (+5 more)
(+13 files in other folders)
