[project]
name = "fastrtc-groq"
version = "0.1.0"
description = "RenataAI voice support assistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastrtc[stt,tts,vad]>=0.0.19",
    "groq>=0.22.0",
    "numpy>=2.1.3",
    "langgraph>=0.1.18",
    "langchain-core>=0.1.29",
    "langchain-groq>=0.1.5",
    "loguru>=0.7.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "kokoro-onnx>=0.4.9",
    "twilio>=9.8.7",
    "sentence-transformers>=5.1.2",
    "faiss-cpu>=1.13.0",
    "langchain-openai>=0.3.35",
    "ngrok>=1.6.0",
    "pyngrok>=7.5.0",
    "langchain-community>=0.3.31",
    "jq>=1.10.0",
    "redis>=5.0.0",
    "langchain-redis>=0.2.4",
    "ollama>=0.6.1",
    "langchain-ollama>=0.3.10",
    "openai-whisper>=20250625",
    "faster-whisper>=1.2.1",
    "rank-bm25>=0.2.2",
    "snac>=1.2.1",
    "transformers>=4.57.1",
    "torch>=2.9.1",
    "bitsandbytes>=0.49.0",
    "accelerate>=1.12.0",
    "flash-attn",
    "hf-xet>=1.2.0",
    "edge-tts>=7.2.7",
]
